# conntopo

./: .gitignore  RDP.md  README.md  pyproject.toml
announcements/: hackernews.md  linkedin.md  reddit_machinelearning.md  reddit_neuroscience.md  twitter_thread.md
experiments/: 01_spontaneous_dynamics.py
scripts/: generate_hero_figure.py  wc_param_sweep.py
src/conntopo/: __init__.py  __main__.py  demo.py
src/conntopo/analysis/: metrics.py
src/conntopo/connectome/: __init__.py
src/conntopo/dynamics/: __init__.py  kuramoto.py
src/conntopo/nullmodels/: __init__.py  generators.py
tests/: test_connectome.py  test_dynamics.py  test_metrics.py  test_nullmodels.py
